external-crates/move/crates/move-compiler/tests/move_check/parser/spec_parsing_emits_fail.exp
error[E01002]: unexpected token
  ┌─ tests/move_check/parser/spec_parsing_emits_fail.move:2:5
  │
2 │     spec with_emits {
  │     ^^^^
  │     │
  │     Unexpected 'spec'
  │     Expected a module member: 'use', 'friend', 'const', 'fun', or 'struct'

